
* Improve "eHRPD Indicator" NVSE dissection in 3GPP2 A11 Registration Request. (ws-buglink:9206[])

* "make debian-package" fails, missing wsicon32.xpm. (ws-buglink:9209[])

* Fix typo in MODCOD list of DVB-S2 dissector. (ws-buglink:9218[])

* Ring buffer crash when tshark gets too far behind dumpcap. (ws-buglink:9258[])

* PTP Dissector Wrongfully Reports Malformed Packet. (ws-buglink:9262[])

* Wireshark crash when dissecting packet with NTLMSSP. (ws-buglink:9299[])

* Padding in uint64 field in DCERPC protocol wrongly reported. (ws-buglink:9300[])

* DCERPC data_blobs are not correctly dissected when NDR64 encoding is used. (ws-buglink:9301[])

* Multiple PDUs in the same DCERPC packet are not correctly decrypted. (ws-buglink:9302[])

* The tshark summary line doesn't display the frame number or displays it sporadically. (ws-buglink:9317[])

=== New and Updated Features

There are no new features in this release.

=== New Protocol Support

There are no new protocols in this release.

=== Updated Protocol Support

--sort-and-group--

3GPP2 A11
BSSGP
DCERPC
DCERPC NDR
DCERPC NT
DIAMETER
DNS
DVB-S2
Ethernet
EtherNet/IP
H.225
IEEE 802.15.4
NBAP
NTLMSSP
OpenWire
PTP
RTP
SIP
TCP
WiMax
XMPP

--sort-and-group--

=== New and Updated Capture File Support

--sort-and-group--

.

--sort-and-group--

== Getting Wireshark

Wireshark source code and installation packages are available from
http://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can
usually install or upgrade Wireshark using the package management system
specific to that platform. A list of third-party packages can be found
on the http://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.

== File Locations

Wireshark and TShark look in several different locations for preference
files, plugins, SNMP MIBS, and RADIUS dictionaries. These locations vary