@@ -119,6 +119,8 @@ instead of 1. (ws-buglink:9126[])
 
 * PTP Dissector Wrongfully Reports Malformed Packet. (ws-buglink:9262[])
 
+* Wireshark lua dissector unable to load for media_type=application/octet-stream. (ws-buglink:9296[])
+
 * Wireshark crash when dissecting packet with NTLMSSP. (ws-buglink:9299[])
 
 * Padding in uint64 field in DCERPC protocol wrongly reported. (ws-buglink:9300[])
@@ -128,6 +130,10 @@ instead of 1. (ws-buglink:9126[])
 * Multiple PDUs in the same DCERPC packet are not correctly decrypted. (ws-buglink:9302[])
 
 * The tshark summary line doesn't display the frame number or displays it sporadically. (ws-buglink:9317[])
+
+* Bluetooth: SDP improvements and minor fixes. (ws-buglink:9327[])
+
+* Duplicate header field abbreviation breaks filter (example: irc.response.command). (ws-buglink:9360[])
 
 === New and Updated Features
 
@@ -142,6 +148,7 @@ There are no new protocols in this release.
 --sort-and-group--
 
 3GPP2 A11
+Bluetooth SDP
 BSSGP
 DCERPC
 DCERPC NDR
@@ -153,6 +160,7 @@ Ethernet
 EtherNet/IP
 H.225
 IEEE 802.15.4
+IRC
 NBAP
 NTLMSSP
 OpenWire
